# auto-trade-system

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AD_KIYU_REFACTOR_PLAN.md  APPLICATION_SUMMARY.md  ARCHITECTURE_REDESIGN.md  ARCHITECTURE_REFACOR_PLAN.md  ARCHITECTURE_REVIEW.md  AUDIT_ADAPTIVE_COMPONENTS.md  BLACK_SWAN_CERTIFICATION.md  BROKER_ADAPTER_EXAMPLE.md  CAPITAL_SCALING_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  COMMIT_MSG_PRIORITY3.txt  CONFIG_AUDIT_REPORT.md  CONFIG_EXPLANATIONS.md  CONTRIBUTING.md  CRITICAL_FINDINGS_REPORT.md  DEPENDENCY_MAP.md  DISASTER_RECOVERY_REPORT.md  Dockerfile  ENTERPRISE_ENGINEERING_REVIEW.md  EXECUTION_FORENSICS_AUDIT.md  EXECUTION_SAFETY_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_CERTIFICATION_REPORT.md  FINAL_ENTERPRISE_CERTIFICATION_REPORT.md  FINAL_EVIDENCE_BASED_SCORECARD.md  FINAL_SYSTEM_SCAN_REPORT.md  FINANCE_SECTION_REPORT.md  GAP_CLOSURE_REPORT.md  GITHUB_READINESS_REPORT.md  HISTORICAL_COMPARISON.md  HOW_TO_USE.txt  (+126 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backups/: idempotency.db
core/: __init__.py  ab_strategy_tester.py  adaptive_behavior_governance.py  adaptive_learning.py  adaptive_signal.py  admin_control_plane.py  ai_engine.py  alert_router.py  anomaly_detector.py  api_gateway.py  audit_engine.py  audit_journal.py  audit_mode.py  auto_learner.py  auto_tuner.py  backtest_engine.py  benchmark.py  broker_capture.py  broker_failover.py  candle_backtest.py  capacity_planning.py  capital_manager.py  change_management.py  circuit_breaker_detector.py  circuit_breaker_monitor.py  cognitive_sentiment.py  common_config_validate.py  component_health_monitor.py  concept_drift_detector.py  config_audit_log.py  config_bootstrap.py  config_engine.py  config_helpers.py  config_loader.py  config_schema_validate.py  config_v2.py  config_validator.py  (+192 more)
(+1030 files in other folders)
