[project]
name = "opbuying-scripts"
version = "2.45.1"
description = "NSE Index Options Buying Bot — automated signal generation, risk management, and trade execution for NIFTY/BANKNIFTY/FINNIFTY"
readme = "SETUP_AND_TRADING_GUIDE.md"
requires-python = ">=3.10,<3.20"
license = { text = "Proprietary" }

dependencies = [
    "jsonschema>=4.20",
    "requests>=2.31.0",
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
broker = [
    "kiteconnect>=5.0.0",
    "pyotp>=2.9.0",
]
dashboard = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
]
ml = [
    "shap>=0.44.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["index_app", "core", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "BLE", "RUF100"]
ignore = ["E501", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]
"core/simulation_engine.py" = ["E701", "E702", "BLE001"]



[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
ignore_missing_imports = true
check_untyped_defs = false
follow_imports = "silent"
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "INDEX_OPTION_BUYING_APP_1.0.py",
    "STOCK_OPTION_BUYING_APP_1.0.py",
]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "scripts.*",
]
disallow_untyped_defs = false
